FIX - overflow html for active sidebar

--- a/markup/static/scss/common.scss
+++ b/markup/static/scss/common.scss
@@ -11,6 +11,10 @@ html, body {
     height: 100%;
 }
 
+html.active{
+    overflow: hidden;
+}
+
 .page {
     
 }
